@@ -36,6 +36,11 @@ project(":desktop-reader") {
 
 	dependencies {
 		compile project(":core")
+
+		compile "org.slf4j:slf4j-api:1.7.21"
+		compile "ch.qos.logback:logback-core:1.1.7"
+		compile "ch.qos.logback:logback-classic:1.1.7"
+
 		compile "org.jdom:jdom2:2.0.6"
 		compile "gnu.getopt:java-getopt:1.0.13"
 	}
