@@ -7,6 +7,8 @@
  - Added a tar distribution for OSX/Linux with launcher scripts.
  - License changed to GPLv3.
  - Fixed the downloader's broken find button.
+ - Incorporated SLF4J into the core library for standardized logging.
+ - Incorporated Logback for logging on the desktop reader.
  - Fixed NestHints not revealing in batches, as the official reader does.
  - Added CatalogParser and DownloadableUHS to the core library.
  - Added UHSBatchNode to the core library, for NestHint chunks.
